SLING-2793 - [Tooling] Align Eclipse tooling to proposed structure
Make it possible to deploy a content plugin on a Sling Launchpad.

git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1504894 13f79535-47bb-0310-9956-ffa450edef68

--- a/slingclipse-wst/plugin.xml
+++ b/slingclipse-wst/plugin.xml
@@ -9,6 +9,18 @@
        name="Sling module type"/>
   </extension>
   
+  <!-- Define a sling module factory -->
+  <extension point="org.eclipse.wst.server.core.moduleFactories">
+  	<moduleFactory
+  		projects="true"
+  		class="org.apache.sling.ide.eclipse.wst.internal.SlingContentModuleFactory"
+  		id="org.apache.sling.contentModuleFactory">
+	    <moduleType
+	       versions="1.0"
+	       types="sling.content"/>
+  	</moduleFactory>
+  </extension>
+  
 	<!-- Define the sling facet we support -->
 	<extension point="org.eclipse.wst.common.project.facet.core.facets">
 		<project-facet id="sling.content">
