SLING-2973 - [Tooling] Align Eclipse tooling to proposed structure
Add an image for the sling.content plugin type.

git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1504897 13f79535-47bb-0310-9956-ffa450edef68

--- a/slingclipse-wst/plugin.xml
+++ b/slingclipse-wst/plugin.xml
@@ -141,6 +141,9 @@
 	      <image
 	         icon="icons/obj16/sling.gif"
 	         typeIds="org.apache.sling.launchpad.server"/>
+	      <image
+	         icon="icons/obj16/sling.gif"
+	         typeIds="sling.content"/>
 	</extension>  
 	
 	<!-- Define the editor section(s) we contribute to the WST UI -->
