--- a/slingclipse-wst/plugin.xml
+++ b/slingclipse-wst/plugin.xml
@@ -162,6 +162,45 @@
     <image runtime-component-type="org.apache.sling.launchpad"
        path="icons/obj16/sling.gif"/>
   </extension>
+  
+  <!-- Menu contributions -->
+     <extension
+         point="org.eclipse.ui.popupMenus">
+         <!-- All Sling contributions -->
+        <objectContribution
+            id="org.apache.sling.slingclipse.slingMenu"
+            objectClass="org.eclipse.core.resources.IProject">
+            <menu id="org.apache.sling.slingclipse.slingMenu"
+              path="additions"
+              label="Sling">
+            	<groupMarker name="sling"/>
+            </menu>
+         </objectContribution>
+         <!-- Import. 
+         	I prefer to do this outside the import wizard section since I can restrict the destination -->
+         <objectContribution id="org.apache.sling.slingclipse.slingImport"
+         	objectClass="org.eclipse.core.resources.IProject">
+         	
+         <action
+               class="org.apache.sling.ide.eclipse.wst.ui.internal.ImportContentAction"
+               id="org.apache.sling.slingclipse.importContentAction"
+               label="Import Content..."
+               menubarPath="org.apache.sling.slingclipse.slingMenu/sling"
+               style="push">
+         </action>
+         <visibility>
+               <objectState
+                     name="open"
+                     value="true">
+               </objectState>
+         </visibility>
+         <enablement>
+				<test 
+		            property="org.eclipse.wst.common.project.facet.core.projectFacet" 
+		            value="sling.content"/>         
+         </enablement>
+		</objectContribution>
+  </extension>
    
 <!--
   <extension point="org.eclipse.debug.ui.launchConfigurationTypeImages">
