--- a/slingclipse-http/build.properties
+++ b/slingclipse-http/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               .options
 source.. = src/
