SLING-2973 - [Tooling] Align Eclipse tooling to proposed structure
Add a project property page for setting the directory to sync. Not yet
hooked up to the actualy sync process.

git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1504907 13f79535-47bb-0310-9956-ffa450edef68

--- a/slingclipse-wst/plugin.xml
+++ b/slingclipse-wst/plugin.xml
@@ -201,6 +201,25 @@
          </enablement>
 		</objectContribution>
   </extension>
+  
+   <!-- Property page for project to select directory to sync -->
+   <extension point="org.eclipse.ui.propertyPages"> 
+        <page 
+            id="org.apache.sling.ide.eclipse.projectPropertyPage" 
+            name="Sling" 
+            class="org.apache.sling.ide.eclipse.wst.ui.internal.SlingProjectPropertyPage" > 
+            <enabledWhen>
+            <and>
+             	<instanceof
+                  	value="org.eclipse.core.resources.IProject">
+             	</instanceof>
+ 				<test 
+		            property="org.eclipse.wst.common.project.facet.core.projectFacet" 
+		            value="sling.content"/>
+             </and>
+          </enabledWhen>
+        </page> 
+    </extension> 
    
 <!--
   <extension point="org.eclipse.debug.ui.launchConfigurationTypeImages">
