SLING-2973 - [Tooling] Align Eclipse tooling to proposed structure
Split classes and extension point configuration between eclipse-core and
eclipse-ui bundles.

git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1504909 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-core/build.properties
+++ b/eclipse-core/build.properties
@@ -2,7 +2,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               .options
+               .options,\
+               plugin.xml
 jars.compile.order = .,\
                      commons-httpclient.jar
 source.. = src/
