--- a/eclipse-core/plugin.xml
+++ b/eclipse-core/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin>
 
-	<!-- Define the sling module type. TODO needed ? -->
+	<!-- Define the sling module type -->
   <extension point="org.eclipse.wst.server.core.moduleTypes">
     <moduleType
        id="sling.content"
@@ -14,7 +14,7 @@
   	<moduleFactory
   		projects="true"
   		class="org.apache.sling.ide.eclipse.core.internal.SlingContentModuleFactory"
-  		id="org.apache.sling.contentModuleFactory">
+  		id="org.apache.sling.ide.contentModuleFactory">
 	    <moduleType
 	       versions="1.0"
 	       types="sling.content"/>
@@ -29,7 +29,6 @@
 		</project-facet>
 		
   		<project-facet-version facet="sling.content" version="1.0"/>
-  		<!-- TODO add image -->
   		
   		<action facet="sling.content" version="1.0" type="INSTALL">
   			<delegate class="org.apache.sling.ide.eclipse.core.internal.SlingContentFacetInstallDelegate"/>
@@ -43,7 +42,7 @@
 	<!-- Define the Sling launchpad runtime type -->
   <extension point="org.eclipse.wst.server.core.runtimeTypes">
     <runtimeType
-       id="org.apache.sling.launchpad.runtime"
+       id="org.apache.sling.ide.launchpadRuntimeType"
        name="Sling Launchpad (runtime name)"
        description="Sling Launchpad (runtime description)"
        vendor="Sling"
@@ -56,7 +55,7 @@
   <!-- Define the Sling launchpad server type -->
   <extension point="org.eclipse.wst.server.core.serverTypes">
      <serverType
-       id="org.apache.sling.launchpad.server"
+       id="org.apache.sling.ide.launchpadServer"
        name="Sling Launchpad (server name)"
        description="Sling Launchpad (server description)"
        supportsRemoteHosts="true"
@@ -65,8 +64,8 @@
        stopTimeout="15000"
        initialState="stopped"
        hasConfiguration="true"
-       launchConfigId="org.apache.sling.ide.eclipse.launchpad.launchConfigurationType"       
-       runtimeTypeId="org.apache.sling.launchpad.runtime"
+       launchConfigId="org.apache.sling.ide.launchpadLaunchConfigurationType"       
+       runtimeTypeId="org.apache.sling.ide.launchpadRuntimeType"
        class="org.apache.sling.ide.eclipse.core.internal.SlingLaunchpadServer"
        behaviourClass="org.apache.sling.ide.eclipse.core.internal.SlingLaunchpadBehaviour">
      </serverType>
@@ -75,13 +74,13 @@
   <extension point="org.eclipse.wst.server.core.launchableAdapters">
      <launchableAdapter
         class="org.apache.sling.ide.eclipse.core.internal.SlingLaunchpadLaunchableAdapterDelegate"
-        id="org.sling.slingclipse.web"/>
+        id="org.apache.sling.ide.launchpadLaunchableAdapterDelegate"/>
   </extension>
 
 	<!-- Define the launch configuration type for the launchpad TODO do we need a sourcePathComputer ? -->
   <extension point="org.eclipse.debug.core.launchConfigurationTypes">
      <launchConfigurationType
-        id="org.apache.sling.ide.eclipse.launchpad.launchConfigurationType"
+        id="org.apache.sling.ide.launchpadLaunchConfigurationType"
         name="Sling Launchpad"
         delegate="org.apache.sling.ide.eclipse.core.internal.SlingLaunchpadLaunchConfigurationDelegate"
         modes="run"
@@ -90,12 +89,12 @@
     
 	<!-- Declare that the launchpad runtime type, supporting content modules -->
 	<extension point="org.eclipse.wst.common.project.facet.core.runtimes">
-		<runtime-component-type id="org.apache.sling.launchpad"/>
-		<runtime-component-version type="org.apache.sling.launchpad" version="1.0"/>
+		<runtime-component-type id="org.apache.sling.ide.launchpadRuntimeComponentType"/>
+		<runtime-component-version type="org.apache.sling.ide.launchpadRuntimeComponentType" version="1.0"/>
 		
 	    <adapter>
 	      <runtime-component
-	         id="org.apache.sling.launchpad"/>
+	         id="org.apache.sling.ide.launchpadRuntimeComponentType"/>
 	      <factory
 	         class="org.eclipse.jst.server.core.internal.RuntimeClasspathProvider$Factory"/>
 	      <type
@@ -103,7 +102,7 @@
 	    </adapter>		
 		
   		<supported>
-  			<runtime-component id="org.apache.sling.launchpad" version="1.0"/>
+  			<runtime-component id="org.apache.sling.ide.launchpadRuntimeComponentType" version="1.0"/>
   			<facet id="sling.content" version="1.0"/>
   		</supported>	
 	</extension>
@@ -112,7 +111,7 @@
 	<!-- Define default facets ( needed ? ) -->
   <extension point="org.eclipse.wst.common.project.facet.core.defaultFacets">
     <default-facets>
-      <runtime-component id="org.apache.sling.launchpad"/>
+      <runtime-component id="org.apache.sling.ide.launchpadRuntimeComponentType"/>
       <facet id="sling.content" version="1.0"/>
     </default-facets>
   </extension>
@@ -120,8 +119,8 @@
 	<!-- Map from the launchpad runtime type to our runtime components -->
 	  <extension point="org.eclipse.jst.server.core.runtimeFacetMappings">
     	<runtimeFacetMapping
-      runtimeTypeId="org.apache.sling.launchpad.runtime"
-      runtime-component="org.apache.sling.launchpad"
+      runtimeTypeId="org.apache.sling.ide.launchpadRuntimeType"
+      runtime-component="org.apache.sling.ide.launchpadRuntimeComponentType"
       version="1.0"/>
      </extension>
 </plugin>    
