--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-features/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-features/pom.xml
@@ -40,7 +40,7 @@
       <plugin>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>karaf-maven-plugin</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0.RC1</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
