--- a/contrib/extensions/healthcheck/hc-sling/pom.xml
+++ b/contrib/extensions/healthcheck/hc-sling/pom.xml
@@ -134,8 +134,8 @@
         </dependency>
          <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.commons.json</artifactId>
-            <version>2.0.6</version>
+            <artifactId>org.apache.sling.commons.osgi</artifactId>
+            <version>2.2.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
