SLING-2976 :  Add support for instance name and description
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1506498 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/settings/pom.xml
+++ b/bundles/extensions/settings/pom.xml
@@ -70,9 +70,12 @@
                         <Bundle-Activator>
                             org.apache.sling.settings.impl.Activator
                         </Bundle-Activator>
+                        <DynamicImport-Package>
+                            org.osgi.service.cm
+                        </DynamicImport-Package>
                         <Import-Package>
-                            org.apache.felix.shell;
-                            resolution:=optional, *
+                            org.apache.felix.shell;resolution:=optional, 
+                            *
                         </Import-Package>
                     </instructions>
                 </configuration>
