SLING-2973 - [Tooling] Align Eclipse tooling to proposed structure
Remove the need to parse JSON when working with the Repository. The
repository implementations are now responsible for parsing the data into
a proper format.

git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1506501 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>target-definition</module>
 		<module>api</module>
 		<module>impl-resource</module>
+        <module>impl-resource-test</module>
 		<module>eclipse-core</module>
 		<module>eclipse-ui</module>
 		<module>feature</module>
