--- a/bundles/commons/scheduler/pom.xml
+++ b/bundles/commons/scheduler/pom.xml
@@ -115,9 +115,15 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.discovery.api</artifactId>
+            <version>1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.1.7</version>
+            <version>2.2.0</version>
         </dependency>
     </dependencies>
 </project>
