SLING-2979 : Add support for running scheduled task only on the leader
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1507250 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/commons/scheduler/pom.xml
+++ b/bundles/commons/scheduler/pom.xml
@@ -58,6 +58,7 @@
                             org.apache.sling.commons.scheduler.impl
                         </Private-Package>
                         <DynamicImport-Package>
+                            org.apache.sling.discovery,
                             commonj.work,
                             com.mchange.v2.c3p0,
                             javax.ejb,
