--- a/bundles/commons/scheduler/pom.xml
+++ b/bundles/commons/scheduler/pom.xml
@@ -58,7 +58,7 @@
                             org.apache.sling.commons.scheduler.impl
                         </Private-Package>
                         <DynamicImport-Package>
-                            org.apache.sling.discovery,
+                            org.apache.sling.discovery;version="[1.0,2)",
                             commonj.work,
                             com.mchange.v2.c3p0,
                             javax.ejb,
