SLING-2789 - deploying Sling 7-SNAPSHOT on Karaf fails
Applied patch SLING-2789.2013-07-25.a.patch from Oliver Lietz.

- removed 'BUILD' component from versions
- misc version updates

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1508099 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-features/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-features/pom.xml
@@ -24,12 +24,12 @@
   <parent>
     <groupId>org.apache.sling</groupId>
     <artifactId>sling</artifactId>
-    <version>16</version>
+    <version>17</version>
     <relativePath>../../../../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>org.apache.sling.launchpad.karaf-features</artifactId>
-  <version>0.1.0.BUILD-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>feature</packaging>
 
   <name>Apache Sling Launchpad Karaf - Features</name>
