--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
@@ -24,12 +24,12 @@
   <parent>
     <groupId>org.apache.sling</groupId>
     <artifactId>sling</artifactId>
-    <version>16</version>
+    <version>17</version>
     <relativePath>../../../../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>org.apache.sling.launchpad.karaf-integration-tests</artifactId>
-  <version>0.1.0.BUILD-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
 
   <name>Apache Sling Launchpad Karaf - Integration Tests</name>
   <description>Integration Tests for Apache Sling Launchpad Karaf</description>
