SLING-2987 - removing tons of code ;-)
git-svn-id: https://svn.apache.org/repos/asf/sling/branches/SLING-2987-healthcheck-redesign@1508827 13f79535-47bb-0310-9956-ffa450edef68

--- a/hc-core/pom.xml
+++ b/hc-core/pom.xml
@@ -33,15 +33,13 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Bundle-Activator>
-                            org.apache.sling.hc.impl.Activator
-                        </Bundle-Activator>
                         <Export-Package>
                             org.apache.sling.hc.api,
-                            org.apache.sling.hc.util
                         </Export-Package>
                         <Private-Package>
                             org.apache.sling.hc.impl.*
+                            org.apache.sling.hc.util.*
+                            org.apache.sling.hc.deprecated.*
                         </Private-Package>
                     </instructions>
                 </configuration>
