--- a/pom.xml
+++ b/pom.xml
@@ -100,5 +100,11 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.scripting.javascript</artifactId>
+            <version>2.0.12</version>
+            <scope>test</scope>
+        </dependency>
      </dependencies>
 </project>
