SLING-2984 : improve import-content wizard:  * made it a standard import wizard again (still also accessible via context menu)  * warnings if project is not added to a server  * restricting target location choice to a project and the option to change the jcr_root of that project  * more beautify to come later (not scope of this ticket)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1508890 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -78,6 +78,23 @@
          </enablement>
 		</objectContribution>
   </extension>
+   <extension
+         point="org.eclipse.ui.importWizards">
+      <category
+            id="org.apache.sling.ide.eclipse.ui.internal.sampleCategory"
+            name="Sling">
+      </category>
+      <wizard
+            category="org.apache.sling.ide.eclipse.ui.internal.sampleCategory"
+            class="org.apache.sling.ide.eclipse.ui.internal.ImportWizard"
+            icon="icons/obj16/sling.gif"
+            id="org.apache.sling.ide.eclipse.ui.internal.ImportWizard"
+            name="Import from Sling Repository">
+         <description>
+            Import a file from the local file system into the workspace.
+         </description>
+      </wizard>
+   </extension>
   
    <!-- Property page for project to select directory to sync -->
    <extension point="org.eclipse.ui.propertyPages"> 
@@ -96,5 +113,5 @@
              </and>
           </enabledWhen>
         </page> 
-    </extension> 
+    </extension>
 </plugin>    
