--- a/pom.xml
+++ b/pom.xml
@@ -185,5 +185,11 @@
             <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.launchpad.api</artifactId>
+                <version>1.1.0</version>
+                <type>bundle</type>
+        </dependency>
     </dependencies>
 </project>
