--- a/bundles/extensions/discovery/impl/pom.xml
+++ b/bundles/extensions/discovery/impl/pom.xml
@@ -151,6 +151,12 @@
 			<version>2.0.6</version>
             <scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.launchpad.api</artifactId>
+		    <version>1.1.0</version>
+            <scope>provided</scope>
+        </dependency>
       <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -184,12 +190,6 @@
             <artifactId>org.apache.sling.testing.tools</artifactId>
             <version>1.0.2</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-                <groupId>org.apache.sling</groupId>
-                <artifactId>org.apache.sling.launchpad.api</artifactId>
-                <version>1.1.0</version>
-                <type>bundle</type>
         </dependency>
     </dependencies>
 </project>
