--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
         <module>bundles/extensions/event</module>
         <module>bundles/extensions/fsresource</module>
         <module>bundles/extensions/javax.activation</module>
+        <module>bundles/extensions/serviceusermapper</module>
         <module>bundles/extensions/settings</module>
         <module>bundles/extensions/threaddump</module>
         <module>bundles/extensions/webconsolebranding</module>
