SLING-2804 : make sure directory exists before running command
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/maven/archetypes/servlet@1510479 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
                         <phase>process-test-resources</phase>
                             <configuration>
                                 <target>
+                                    <mkdir dir="${project.build.testOutputDirectory}" /> <!-- SLING-2804 -->
                                     <fixcrlf srcdir="${project.build.testOutputDirectory}" />
                                 </target>
                             </configuration>
