SLING-2996 :  use project.* properties instead of pom.* properties . Apply patch from Oliver Lietz
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1510951 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/apt/servlet/pom.xml
+++ b/contrib/extensions/apt/servlet/pom.xml
@@ -52,7 +52,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Export-Package>org.apache.sling.apt.servlet.*;version=${pom.version}</Export-Package>
+            <Export-Package>org.apache.sling.apt.servlet.*;version=${project.version}</Export-Package>
           </instructions>
         </configuration>
       </plugin>
