--- a/contrib/extensions/apt/parser/pom.xml
+++ b/contrib/extensions/apt/parser/pom.xml
@@ -56,7 +56,7 @@
                 <configuration>
                     <instructions>
                         <Export-Package>
-                            org.apache.sling.apt.parser;version=${pom.version}
+                            org.apache.sling.apt.parser;version=${project.version}
                         </Export-Package>
                         <Private-Package>
                             org.apache.sling.apt.parser.internal,
