--- a/contrib/scripting/freemarker/pom.xml
+++ b/contrib/scripting/freemarker/pom.xml
@@ -77,8 +77,8 @@
                             org.python.*;resolution:=optional, *
                         </Import-Package>
                         
-                        <ScriptEngine-Name>${pom.name}</ScriptEngine-Name>
-                        <ScriptEngine-Version>${pom.version}</ScriptEngine-Version>
+                        <ScriptEngine-Name>${project.name}</ScriptEngine-Name>
+                        <ScriptEngine-Version>${project.version}</ScriptEngine-Version>
                     </instructions>
                 </configuration>
             </plugin>
