--- a/contrib/scripting/ruby/pom.xml
+++ b/contrib/scripting/ruby/pom.xml
@@ -62,8 +62,8 @@
 		          com.sun.*;org.apache.bsf.*;sun.*;resolution:=optional
 			</Import-Package> 
 			<DynamicImport-Package>*</DynamicImport-Package>
-                        <ScriptEngine-Name>${pom.name}</ScriptEngine-Name>
-                        <ScriptEngine-Version>${pom.version}</ScriptEngine-Version>
+                        <ScriptEngine-Name>${project.name}</ScriptEngine-Name>
+                        <ScriptEngine-Version>${project.version}</ScriptEngine-Version>
                     </instructions>
                 </configuration>
             </plugin>
