--- a/contrib/scripting/velocity/pom.xml
+++ b/contrib/scripting/velocity/pom.xml
@@ -72,8 +72,8 @@
                             org.jdom.*;resolution:=optional, *
                         </Import-Package>
                         
-                        <ScriptEngine-Name>${pom.name}</ScriptEngine-Name>
-                        <ScriptEngine-Version>${pom.version}</ScriptEngine-Version>
+                        <ScriptEngine-Name>${project.name}</ScriptEngine-Name>
+                        <ScriptEngine-Version>${project.version}</ScriptEngine-Version>
                     </instructions>
                 </configuration>
             </plugin>
